# trapdoor

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml
docs/: TUTORIAL.md
docs/assets/: render_gif.py
examples/: demo.sh  pipeline.sh
src/: main.rs  stub.sh
tests/: cli.rs
tests/fixtures/: exit3.sh
