[package]
name = "trapdoor"
version = "0.1.0"
edition = "2021"
description = "An interactive step-debugger for Bash scripts. No bash patches, no ptrace, no dependencies - just the DEBUG trap and /dev/tcp."
license = "MIT"
repository = "https://github.com/zephr/trapdoor"
keywords = ["bash", "debugger", "shell", "devtools"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]

[profile.release]
strip = true
lto = true
